--- a/style.css
+++ b/style.css
@@ -60,28 +60,81 @@ nav ul li a {
   color: #727272;
   font-weight: 400;
 }
-.banner img{
-    width: 100%;
-    margin-top: 20px;
+.banner img {
+  width: 100%;
+  margin-top: 20px;
+}
+
+/* Features Section style start */
+main {
+  margin: 60px 240px;
+}
+.features-section {
+  display: flex;
+  justify-content: space-between;
+}
+.features-img {
+  display: grid;
+  margin-right: 70px;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1.5rem;
+}
+.features-title {
+  font-size: 2.5rem;
+}
+.features-title .quick-list {
+  color: #727272;
+  font-size: 45px;
+  font-weight: 500;
+}
+.features-title .features {
+  color: #ff900e;
+  font-size: 45px;
+  font-weight: 700;
+}
+.features-title .of-our {
+  color: #131313;
+  font-size: 45px;
+  font-weight: 700;
+}
+.features-description {
+  color: #727272;
+  font-size: 16px;
+  font-weight: 400;
 }
 
 /* Responsive media queries */
 /* Mobile devicss */
-@media  screen and (max-width: 576px) {
-    header{
-        padding: 20px;
-    }
-    nav{
-        flex-direction: column;
-    }
-    
+@media screen and (max-width: 576px) {
+  header {
+    padding: 20px;
+  }
+  nav,
+  .features-section {
+    flex-direction: column;
+  }
+  .features-img {
+    grid-template-columns: 1fr;
+    margin-bottom: 1rem;
+  }
+  main {
+    margin: 10px;
+  }
 }
 /* Tablet or medium devices */
-@media screen and (min-width:576px) and (max-width: 960px){
-    nav{
-        flex-direction: column;
-    }
-    header{
-        padding: 50px;
-    }
+@media screen and (min-width: 576px) and (max-width: 960px) {
+  nav,
+  .features-section {
+    flex-direction: column;
+  }
+  .features-img {
+    grid-template-columns: 2fr;
+
+  }
+  header {
+    padding: 50px;
+  }
+  main{
+    margin: 70px;
+  }
 }
