--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ main {
   }
   nav,
   .features-section {
-    flex-direction: column;
+    flex-direction: column-reverse;
   }
   .features-img {
     grid-template-columns: 1fr;
@@ -125,7 +125,7 @@ main {
 @media screen and (min-width: 576px) and (max-width: 960px) {
   nav,
   .features-section {
-    flex-direction: column;
+    flex-direction: column-reverse;
   }
   .features-img {
     grid-template-columns: 2fr;
