--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ nav ul li a {
 /* Features Section style start */
 main {
   margin: 60px 240px;
+  max-width: 1440px;
 }
 .features-section {
   display: flex;
@@ -84,23 +85,60 @@ main {
 }
 .features-title .quick-list {
   color: #727272;
-  font-size: 45px;
+  font-size: 2.8rem;
   font-weight: 500;
 }
 .features-title .features {
   color: #ff900e;
-  font-size: 45px;
+  font-size: 2.8rem;
   font-weight: 700;
 }
 .features-title .of-our {
   color: #131313;
-  font-size: 45px;
+  font-size: 2.8rem;
   font-weight: 700;
 }
 .features-description {
   color: #727272;
-  font-size: 16px;
   font-weight: 400;
+}
+
+/* Facts section style */
+.some-facts {
+  margin-top: 70px;
+}
+.facts-title {
+  color: #131313;
+  font-size: 2.8rem;
+  font-weight: 700;
+}
+.facts-description {
+  color: #727272;
+  font-weight: 400;
+}
+.facts {
+  margin-bottom: 50px;
+}
+.card-container {
+  display: flex;
+  justify-content: space-around;
+}
+
+.card {
+  border-radius: 0.5rem;
+  border: 1px solid #ff900e;
+  text-align: center;
+  padding: 15px 20px;
+}
+.card-state {
+  color: #424242;
+  font-size: 2.8rem;
+  font-weight: 600;
+}
+.card-title {
+  color: #727272;
+  font-size: 1.25rem;
+  font-weight: 600;
 }
 
 /* Responsive media queries */
@@ -109,8 +147,11 @@ main {
   header {
     padding: 20px;
   }
-  nav,
-  .features-section {
+  nav,.card-container
+   {
+    flex-direction: column;
+  }
+  .features-section{
     flex-direction: column-reverse;
   }
   .features-img {
@@ -123,18 +164,19 @@ main {
 }
 /* Tablet or medium devices */
 @media screen and (min-width: 576px) and (max-width: 960px) {
-  nav,
+  nav,.card-container{
+    flex-direction: column;
+  }
   .features-section {
     flex-direction: column-reverse;
   }
   .features-img {
-    grid-template-columns: repeat(2,2fr);
-
+    grid-template-columns: repeat(2, 2fr);
   }
   header {
     padding: 50px;
   }
-  main{
+  main {
     margin: 70px;
   }
 }
